syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/Asuha-a/ProgrammingCourseMarket/internal/pkg/pb/user";

package user;

service User {
  rpc ListUsers (ListUsersRequest) returns (stream ListUsersReply) {}
  rpc GetUser (GetUserRequest) returns (GetUserReply) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply) {}
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {}
}

message ListUsersRequest {
  string token = 1;
}

message ListUsersReply {
  string uuid = 1;
  string name = 2;
  string introduction = 3;
  string email = 4;
  string permission = 5;
}

message GetUserRequest {
  string uuid = 1;
}

message GetUserReply {
  string uuid = 1;
  string name = 2;
  string introduction = 3;
  string email = 4;
  string permission = 5;
}

message CreateUserRequest {
  string name = 1;
  string introduction = 2;
  string email = 3;
  string password = 4;
}
  
message CreateUserReply {
  string token = 1;
  string uuid = 2;
  string name = 3;
  string introduction = 4;
  string email = 5;
  string permission = 6;
}

message UpdateUserRequest {
  string token = 1;
  string name = 2;
  string introduction = 3;
  string email = 4;
  string password = 5;
  string uuid = 6;
}

message UpdateUserReply {
  string token = 1;
  string uuid = 2;
  string name = 3;
  string introduction = 4;
  string email = 5;
  string permission = 6;
}

message DeleteUserRequest {
  string token = 1;
  string uuid = 2;
}
